@@ -1,85 +1,84 @@
 package com.evcar.service.vehicle;
 
-import org.springframework.stereotype.Service;
 import com.evcar.domain.vehicle.Vehicle;
 import com.evcar.dto.vehicle.VehicleDetailDto;
 import com.evcar.dto.vehicle.VehicleListDto;
 import com.evcar.repository.vehicle.VehicleRepository;
-
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class VehicleServiceImpl implements VehicleService {
 
+    private static final String VEHICLE_STATUS_ACTIVE = "ACTIVE";
+
     private final VehicleRepository vehicleRepository;
-    private final WishlistService wishlistService;
 
-    public VehicleServiceImpl(VehicleRepository vehicleRepository,
-                              WishlistService wishlistService) {
-        this.vehicleRepository = vehicleRepository;
-        this.wishlistService = wishlistService;
-    }
-
-    // 차량 리스트
     @Override
     public List<VehicleListDto> getVehicleList(String brand, String vehicleClass) {
+        List<Vehicle> vehicles;
 
-        List<Vehicle> vehicles = vehicleRepository.findByFilter(brand, vehicleClass);
+        boolean hasBrand = StringUtils.hasText(brand);
+        boolean hasVehicleClass = StringUtils.hasText(vehicleClass);
 
-        return vehicles.stream().map(v -> {
-
-            VehicleListDto dto = new VehicleListDto(
-                    v.getVehicleId(),
-                    v.getBrand(),
-                    v.getModelName(),
-                    v.getVehicleClass(),
-                    v.getPriceBasic(),
-                    v.getPricePremium(),
-                    v.getDrivingRange(),
-                    v.getImageUrl(),
-                    v.getCatalogUrl()
+        if (hasBrand && hasVehicleClass) {
+            vehicles = vehicleRepository.findByVehicleStatusAndBrandAndVehicleClassOrderByCreatedAtDesc(
+                    VEHICLE_STATUS_ACTIVE,
+                    brand,
+                    vehicleClass
             );
+        } else if (hasBrand) {
+            vehicles = vehicleRepository.findByVehicleStatusAndBrandOrderByCreatedAtDesc(
+                    VEHICLE_STATUS_ACTIVE,
+                    brand
+            );
+        } else if (hasVehicleClass) {
+            vehicles = vehicleRepository.findByVehicleStatusAndVehicleClassOrderByCreatedAtDesc(
+                    VEHICLE_STATUS_ACTIVE,
+                    vehicleClass
+            );
+        } else {
+            vehicles = vehicleRepository.findByVehicleStatusOrderByCreatedAtDesc(VEHICLE_STATUS_ACTIVE);
+        }
 
-            dto.setWished(wishlistService.isWished(v.getVehicleId()));
-
-            return dto;
-
-        }).collect(Collectors.toList());
+        return vehicles.stream()
+                .map(vehicle -> VehicleListDto.builder()
+                        .vehicleId(vehicle.getVehicleId())
+                        .brand(vehicle.getBrand())
+                        .modelName(vehicle.getModelName())
+                        .vehicleClass(vehicle.getVehicleClass())
+                        .priceBasic(vehicle.getPriceBasic())
+                        .imageUrl(vehicle.getImageUrl())
+                        .build())
+                .toList();
     }
 
-    // 차량 상세
     @Override
-    public VehicleDetailDto getDetail(Long vehicleId) {
+    public VehicleDetailDto getDetail(String vehicleId) {
+        Vehicle vehicle = vehicleRepository.findById(vehicleId)
+                .orElseThrow(() -> new IllegalArgumentException("해당 차량 정보를 찾을 수 없습니다."));
 
-        Vehicle v = vehicleRepository.findById(vehicleId)
-                .orElseThrow(() -> new RuntimeException("차량 없음"));
-
-        VehicleDetailDto dto = new VehicleDetailDto();
-
-        dto.setVehicleId(v.getVehicleId());
-        dto.setBrand(v.getBrand());
-        dto.setModelName(v.getModelName());
-        dto.setVehicleClass(v.getVehicleClass());
-        dto.setPriceBasic(v.getPriceBasic());
-        dto.setPricePremium(v.getPricePremium());
-        dto.setDrivingRange(v.getDrivingRange());
-        dto.setFastChargingTime(v.getFastChargingTime());
-        dto.setSlowChargingTime(v.getSlowChargingTime());
-        dto.setChargingMethod(v.getChargingMethod());
-
-        // 🔥 여기만 수정 (null 방어)
-        dto.setBatteryCapacity(
-                v.getBatteryCapacity() != null ? v.getBatteryCapacity().doubleValue() : 0.0
+        return new VehicleDetailDto(
+                vehicle.getVehicleId(),
+                vehicle.getBrand(),
+                vehicle.getModelName(),
+                vehicle.getVehicleClass(),
+                vehicle.getPriceBasic(),
+                vehicle.getPricePremium(),
+                vehicle.getDrivingRange(),
+                vehicle.getFastChargingTime(),
+                vehicle.getSlowChargingTime(),
+                vehicle.getChargingMethod(),
+                vehicle.getBatteryCapacity() == null ? null : vehicle.getBatteryCapacity().doubleValue(),
+                vehicle.getImageUrl(),
+                vehicle.getCatalogUrl(),
+                vehicle.getVehicleUrl(),
+                false
         );
-
-        dto.setImageUrl(v.getImageUrl());
-        dto.setCatalogUrl(v.getCatalogUrl());
-
-        return dto;
-    }
-
-    public Vehicle getVehicleDetail(Long id) {
-        return vehicleRepository.findById(id).orElse(null);
     }
 }
